// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTournament should render full width correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kYgBaB"
  >
    <div
      class="sc-htpNat sc-ifAKCX dniyMN team-flags"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render full width correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hSmNfz"
  >
    <div
      class="sc-htpNat sc-ifAKCX dniyMN team-flags"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hOxnUM"
  >
    <div
      class="sc-htpNat sc-ifAKCX dniyMN team-flags"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iGGGrD"
  >
    <div
      class="sc-htpNat sc-ifAKCX dniyMN team-flags"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hOxnUM"
  >
    <div
      class="sc-htpNat sc-ifAKCX UELGY team-flags"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render national competitions correctly with single column 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iGGGrD"
  >
    <div
      class="sc-htpNat sc-ifAKCX UELGY team-flags"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hOxnUM"
  >
    <div
      class="sc-htpNat sc-ifAKCX bqOljm"
    />
    <div
      class="sc-bwzfXH jStUkM"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTournament should render other competitions correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa iGGGrD"
  >
    <div
      class="sc-htpNat sc-ifAKCX bqOljm"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
